View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024846 | Open CASCADE | OCCT:Coding | public | 2014-04-16 17:26 | 2014-05-05 13:39 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.1 | ||||
Target Version | 6.7.1 | Fixed in Version | 6.7.1 | ||
Summary | 0024846: CLang warnings -Wunneeded-internal-declaration | ||||
Description | CLang on Mac OS X 10.9 reports multiple warnings -Wunneeded-internal-declaration which in most cases indicate wrong code: BRepCheck_Shell.cxx:45:13: warning: function 'PropagateRecurs' is not needed and will not be emitted [-Wunneeded-internal-declaration] | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Unused function was removed. Changes are located in branch CR24846. Please, review. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR24846 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 7c638cd173e16cf7ae2e6f5ff9910463f76cdfa6 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) MacOS: 412 (413 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 352602468 / 352616108 Total CPU difference: 64664.69999999988 / 67341.82000000024 Testing on Windows: Total MEMORY difference: 381242284 / 380703700 Total CPU difference: 36288.84375 / 39760.09375 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-16 17:26 |
|
New Issue | |
2014-04-16 17:26 |
|
Assigned To | => ski |
2014-04-16 17:26 |
|
Status | new => assigned |
2014-04-16 17:35 |
|
Note Added: 0028890 | |
2014-04-16 17:35 |
|
Assigned To | ski => abv |
2014-04-16 17:35 |
|
Status | assigned => resolved |
2014-04-16 17:49 |
|
Note Added: 0028893 | |
2014-04-16 17:49 |
|
Assigned To | abv => bugmaster |
2014-04-16 17:49 |
|
Status | resolved => reviewed |
2014-04-16 19:22 |
|
Assigned To | bugmaster => mkv |
2014-04-17 16:40 |
|
Target Version | => 6.7.1 |
2014-04-18 15:16 |
|
Note Added: 0028967 | |
2014-04-18 16:36 |
|
Test case number | => Not needed |
2014-04-18 16:36 |
|
Assigned To | mkv => bugmaster |
2014-04-18 16:36 |
|
Status | reviewed => tested |
2014-04-28 10:27 |
|
Changeset attached | => occt master 5c08e198 |
2014-04-28 10:27 |
|
Assigned To | bugmaster => abv |
2014-04-28 10:27 |
|
Status | tested => verified |
2014-04-28 10:27 |
|
Resolution | open => fixed |
2014-05-05 13:20 | bugmaster | Status | verified => closed |
2014-05-05 13:39 |
|
Fixed in Version | => 6.7.1 |