0024846: CLang warnings -Wunneeded-internal-declaration

Unused function was removed.